[package]
name = "qcells"
version = "0.1.1"
edition = "2021"
authors = ["DeathsGun"]
license = "Apache-2.0"
description = "A Rust Q.HOME+ESS - QCELLS API client."
repository = "https://github.com/deathsgun/qcells"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7.0"